--- a/index.html
+++ b/index.html
@@ -191,12 +191,12 @@
         </div>
         <!-- features section -->
         <section id="features" class="features mt-5">
-            <h1 class="text-white" align="center">FEATURES</h1>
+            <h1 class="text-white hidden" align="center">FEATURES</h1>
             <div class="container">
                 
                 <div class="row g-4 my-5">
                     <div class="col-lg-6 col-md-12 mb-3 mb-sm-0">
-                      <div class="card card-1 border-0 bg-transparent">
+                      <div class="card card-1 border-0 bg-transparent hidden">
                         <div class="card-body position-relative">
                           <a href="#" class="btn btn-danger text-white">What's New?</a>
                         <p class="card-text text-white">Deposit with Cryptocurrency & Cash.</p>
@@ -204,8 +204,8 @@
                 </div>
             </div>
             <div class="col-lg-6 col-md-12">
-                <div class="card card-2 border-0 bg-transparent">
-                    <div class="card-body position-relative">
+                <div class="card card-2 border-0 bg-transparent hidden">
+                    <div class="card-body position-relative ">
                         <a href="#" class="btn btn-danger text-white">Did you know?</a>
                         <p class="card-text text-white">You can Withdraw funds to your Crypto Wallet or Bank Account.</p>
                     </div>
@@ -216,7 +216,7 @@
 
         <div class="row row-cols-1 row-cols-lg-3 g-4">
             <div class="col">
-                <div class="card card-3 card-col-3-content">
+                <div class="card card-3 card-col-3-content hidden">
                     <div class="card-body d-flex align-items-center justify-content-between">
                         <img src="img/Rectangle 35.png" alt="" class="me-4 w-50" />
                         <p class="card-text text-white">
@@ -226,7 +226,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card card-4 card-col-3-content">
+                <div class="card card-4 card-col-3-content hidden">
                     <div class="card-body d-flex align-items-center justify-content-between">
                         <img src="img/Rectangle 36 (1).png" alt="" class="me-4 w-50" />
                         <p class="card-text text-white">
@@ -236,8 +236,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card card-5 card-col-3-content">
-                    <div class="card-body d-flex align-items-center ">
+                <div class="card card-5 card-col-3-content hidden">
+                    <div class="card-body d-flex align-items-center">
                         <img src="img/Rectangle 37.png" alt="" class="me-4 w-50" />
                         <p class="card-text text-white">
                             Binary Trading
@@ -253,17 +253,17 @@
 
     <!-- Category/Main Section -->
     <main class="category-section">
-        <h1 class="text-white category-property-heading">CATEGORIES</h1>
+        <h1 class="text-white category-property-heading hidden">CATEGORIES</h1>
         <section class="category" id="category">
             <div class="category-img">
                 <div class="container section-1-content">
                     <div class="section-1-content-inner">
-                        <div class="">
+                        <div class="hidden">
                             <h2 class="text-white category-property">LIVE PREDICTION</h2>
-                            <p class="text-white mb-4">Bet on global events and trending topics.</p>
+                            <p id="text" class="text-white mb-4">Bet on global events and trending topics.</p>
                             <a class="btn btn-danger" href="#">Play now</a>
                         </div>
-                        <img class="w-100 img-tag" src="img/gif_2__1__1-removebg-preview 1.png" alt="">
+                        <img class="w-100 img-tag hidden" src="img/gif_2__1__1-removebg-preview 1.png" alt="">
 
                     </div>
                 </div>
@@ -279,14 +279,14 @@
                 <div class="section-1-content-inner">
                     <div>
                         <img src="./img/coin-3 1.png " alt="Bitcoin " class="img-coin-left-t coin-w ">
-                        <img class="img-tag-2 w-100 image-1" src="./img/330134302_634348538458505_969495861248945596_n-removebg-preview 1.png " alt=" ">
+                        <img class="img-tag-2 w-100 image-1 hidden" src="./img/330134302_634348538458505_969495861248945596_n-removebg-preview 1.png " alt=" ">
                         <img src="./img/coin-3 1.png " alt="Bitcoin " class="img-coin-left-b coin-w ">
                     </div>
-                    <div class="text">
+                    <div class="text hidden">
                         <img src="./img/coin-3 1.png " alt="Bitcoin " class="img-coin-right-t coin-w ">
 
                         <h2 class="text-white mb-4 category-property ">LOTTERY & CASINO</h2>
-                        <p class="text-white mb-4 ">Buy official Lottery Tickets to win our weekly & monthly Lottery draw.</p>
+                        <p id="text-2" class="text-white mb-4 ">Buy official Lottery Tickets to win our weekly & monthly Lottery draw.</p>
                         <a class="btn btn-danger " href="# ">Play now</a>
 
                         <img src="./img/coin-3 1.png " alt="Bitcoin " class="img-coin-right-b coin-w ">
@@ -299,12 +299,12 @@
             <div class="category-img-3 ">
                 <div class="container section-1-content">
                     <div class="section-1-content-inner">
-                        <div>
+                        <div class="hidden">
                             <h2 class="text-white mb-4 category-property ">FOREX</h2>
-                            <p class="text-white mb-4 ">Binary Trading on Cryptocurrencies, Fiat and on Daily Stock market price.</p>
+                            <p id="text-3" class="text-white mb-4 ">Binary Trading on Cryptocurrencies, Fiat and on Daily Stock market price.</p>
                             <a class="btn btn-danger " href="# ">Play now</a>
                         </div>
-                        <img class="img-tag w-100 " src="img/about-1.png " alt=" ">
+                        <img class="img-tag w-100 hidden" src="img/about-1.png " alt=" ">
                     </div>
                 </div>
             </div>
@@ -317,11 +317,11 @@
 
             <div class="container section-1-content mt-4">
                 <div class=" section-1-content-inner ">
-                    <img class="img-tag-2 w-100 image-1 " src="./img/4-04-768x414-removebg-preview 1.png " alt=" ">
+                    <img class="img-tag-2 w-100 image-1 hidden" src="./img/4-04-768x414-removebg-preview 1.png " alt=" ">
 
-                    <div class="text ">
+                    <div class="text hidden">
                         <h2 class="text-white mb-4 category-property ">VIDEO CHALLENGE</h2>
-                        <p class="text-white mb-4 ">Challenge your opponent, Post Challenge videos, Place wager against opponent, Highest Likes wins the challenge.</p>
+                        <p id="text-4" class="text-white mb-4 ">Challenge your opponent, Post Challenge videos, Place wager against opponent, Highest Likes wins the challenge.</p>
                         <a class="btn btn-danger " href="# ">Play now</a>
                     </div>
                 </div>
@@ -333,18 +333,18 @@
 
     <!-- Participate Section -->
     <div class="participate mb-5 mt-5 ">
-        <h2 class="text-white mb-5 mt-5 participate-property-title d-flex justify-content-center ">HOW TO PARTICIPATE</h2>
+        <h2 class="text-white mb-5 mt-5 participate-property-title d-flex justify-content-center hidden">HOW TO PARTICIPATE</h2>
         <div class="container mt-5 ">
             <div class="row d-flex align-items-center justify-content-center ">
-                <div class="col-md-4 ">
+                <div class="col-md-4 hidden">
                     <h3 class="text-white participate-property ">STEP 1</h3>
                     <p class="w-100 text-white ">Select your favourite Category on ConnectBoy. Preferably one you're most familiar with!</p>
                 </div>
-                <div class="col-md-4 ">
+                <div class="col-md-4 hidden">
                     <h3 class="text-white participate-property ">STEP 2</h3>
                     <p class="w-100 text-white ">Sign up and make a deposit on your wallet to get started.</p>
                 </div>
-                <div class="col-md-4 ">
+                <div class="col-md-4 hidden">
                     <h3 class="text-white participate-property ">STEP 3</h3>
                     <p class="w-100 text-white ">Withdraw your winnings to your crypto wallet or bank account.</p>
                 </div>
@@ -355,10 +355,10 @@
 
     <!-- Section Up-Coming FEATURES -->
     <section class="u-features container">
-        <h2 class="text-white u-features-property d-flex justify-content-center">UPCOMING FEATURES</h2>
+        <h2 class="text-white u-features-property d-flex justify-content-center hidden">UPCOMING FEATURES</h2>
         <div class="row row-cols-1 row-cols-md-2 g-4 ">
             <div class="col ">
-                <div class="card border-0 bg-transparent mt-lg-5">
+                <div class="card border-0 bg-transparent mt-lg-5 hidden">
                     <img src="./img/Vector.png " class="card-img-top " alt="... ">
                     <div class="card-body ">
                         <h5 class="text-white card-title mb-4 ">CONNECTBOY GAMES</h5>
@@ -368,7 +368,7 @@
                 </div>
             </div>
             <div class="col ">
-                <div class="card border-0 bg-transparent ">
+                <div class="card border-0 bg-transparent hidden">
                     <div class="img-wrapper card-img-top my-4 d-flex ">
                         <img class="w-25" src="./img/Screenshot 2023-02-25 080438.jpg" alt="">
                     </div>
@@ -380,22 +380,23 @@
                 </div>
             </div>
             <div class="col ">
-                <div class="card border-0 bg-transparent ">
+                <div class="card border-0 bg-transparent hidden">
                     <img src="./img/Vector (3).png " class="card-img-top mb-5 " alt="... ">
                     <div class="card-body ">
                         <h5 class="text-white card-title mb-4 ">BECOME AN AGENT</h5>
-                        <p class="text-white card-text mb-3 "><span style="text-transform: uppercase; " ">P</span>artner with us and bring ConnectBoy to your City. Become an agent and own your very own shop in your local area, Extend our online
+                        <p class="text-white card-text mb-3 ">
+                            <span style="text-transform: uppercase; " ">P</span>artner with us and bring ConnectBoy to your City. Become an agent and own your very own shop in your local area, Extend our online
                                     services to users in your city let's reach the world together.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col ">
-                        <div class="card border-0 bg-transparent ">
+                        <div class="card border-0 bg-transparent hidden ">
                             <img src="./img/Vector (4).png " class="card-img-top mb-5 " alt="... ">
                             <div class="card-body ">
                                 <h5 class="text-white card-title mb-4 ">CONNECT WORLD</h5>
                                 <p class="text-white card-text mb-3 ">
-                                    <span style="text-transform: uppercase; " ">C</span>onnect World is a physical and Virtual Reality space where users can come in and participate on all our categories physically or Virtually.</p>
+                                    <span style="text-transform: uppercase; ">C</span>onnect World is a physical and Virtual Reality space where users can come in and participate on all our categories physically or Virtually.</p>
                     </div>
                 </div>
             </div>
@@ -404,9 +405,9 @@
 
     <!-- Partners Section -->
     <div class="partners container ">
-        <h3 class="partners-title d-flex justify-content-center text-white ">PARTNERS</h3>
+        <h3 class="partners-title d-flex justify-content-center text-white hidden ">PARTNERS</h3>
         <div class="container text-center ">
-            <div class="row row-1 mb-5 ">
+            <div class="row row-1 mb-5 hidden ">
                 <div class="col ">
                     <a href="# " class="partners-link "><img class="partner-logo " src="./img/Mask group (3).png " alt=" "></a>
                 </div>
@@ -424,7 +425,7 @@
                 </div>
             </div>
 
-            <div class="row row-1">
+            <div class="row row-1 hidden ">
                 <div class="col ">
                     <a href="# " class="partners-link "><img class="partner-logo " src="./img/Mask group (9).png " alt=" " class="partners-logo "></a>
                 </div>
@@ -447,7 +448,7 @@
     <!-- Connect World -->
     <div class="connect-info-bg mt-3 mb-5 ">
         <div class="container connect-info ">
-            <div class="d-lg-flex align-items-center justify-content-center ">
+            <div class="d-lg-flex align-items-center justify-content-center hidden ">
                 <div class=" ">
                     <h3 class="text-white ">CONNECT WORLD</h3>
                     <p class="text-white w-75 ">Connect World is a physical and Virtual Reality space when users can come in and participate on all our categories physically or Virtually.</p>
