--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <div class="card-body position-relative">
                 <a href="#" class="btn btn-danger text-white">What's New?</a>
         <p class="card-text text-white">
-            Deposit with Cryptocurrency & Cash.
+            Deposit with Cryptocurrency & Cash
         </p>
         </div>
         </div>
@@ -201,7 +201,7 @@
                 <div class="card-body position-relative">
                     <a href="#" class="btn btn-danger text-white">Did you know?</a>
                     <p class="card-text text-white">
-                        You can Withdraw funds to your Crypto Wallet or Bank Account.
+                        You can Withdraw funds to your Crypto Wallet or Bank Account
                     </p>
                 </div>
             </div>
@@ -480,8 +480,8 @@
                             Connect World is a physical and Virtual Reality space where users can come in and participate on all our categories physically or Virtually.
                         </p>
                     </div>
-                    <div class="mt-5 right-img">
-                        <img class="w-100" src="./img/k4fnk4f-768x752.png " alt=" " />
+                    <div class="mt-5 right-img ">
+                        <img class="w-100 " src="./img/k4fnk4f-768x752.png " alt=" " />
                     </div>
                 </div>
             </div>
