--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <img src="img/istockphoto-1142867045-612x612-removebg-preview 1.png" class="d-block w-100" alt="..." />
                     </div>
                 </div>
-                <div class="carousel-item" data-bs-interval="3000">
+                <div class="carousel-item carousel-item-height" data-bs-interval="3000">
                     <div class="container carousel-content d-lg-flex align-items-center justify-content-center my-5">
                         <div class="text-white carousel-content-text">
                             <h1>Metaverse</h1>
@@ -137,11 +137,13 @@
                   >
                 </div>
               </div>
-              <img
-                src="img/k4fnk4f-768x752.png"
-                class="d-block w-100"
-                alt="..."
-              />
+              <div class="right-image-flex">
+                <img
+                  src="img/k4fnk4f-768x752.png"
+                  class="d-block w-100 image-flex"
+                  alt="..."
+                />
+              </div>
             </div>
           </div>
 
@@ -246,7 +248,7 @@
         <!-- Category/Main Section -->
         <main class="category-section" id="category">
             <h1 class="text-white category-property-heading hidden">CATEGORIES</h1>
-            <section class="category" id="category">
+            <section class="category category-1 pb-5" id="category">
                 <div class="category-img">
                     <div class="container section-1-content">
                         <div class="section-1-content-inner container">
